--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
-[class~='searchresultitem'][data-card-type='cpc'] {
-  display: none;
+[class~='searchresultitem'][data-card-type='cpc'], .keywordcontent {
+  display: none !important;
 }
